# hexapod

./: .gitignore  README.md  animations.py  body.py  config.yaml  leg.py  main.py  planner.py  servo.py  visualizer.py
legacy/: crab.py  helper.py  leg.py  leg_stupid.py  main.py  servo.py  thankyou.py
maps/bumps/: heightmap.csv  meta.yaml
maps/flat/: heightmap.csv  meta.yaml
maps/gap/: heightmap.csv  meta.yaml
maps/gaps/: heightmap.csv  meta.yaml
maps/ridges/: heightmap.csv  meta.yaml
planner/: CMakeLists.txt  planner.cpp
sim/: __init__.py  show_robot.py  sim_body.py  sim_servo.py
